<resources>
    <string name="app_name">Headunit Controller</string>

    <!-- Internal keys !-->
    <string name="PLAYING_AUDIO_APP_KEY">last_audio_app</string>
    <string name="PLAYING_RADIO_KEY">playing_radio</string>
    <string name="DRIVING_MODE_RUNNING_KEY">driving_mode_running</string>
    <string name="should_start_driving_mode_key">should_start_driving_mode</string>
    <string name="maps_was_on_screen_key">maps_was_on_screen</string>

    <!-- Settable preference keys !-->
    <string name="pref_power_on_debug_key">power_on_debug</string>
    <string name="pref_debug_enabled_key">debug</string>
    <string name="pref_num_devices_key">max_devices_key</string>

    <string name="pref_key_press_action_key">key%1$d_press_action_key</string>
    <string name="pref_key_press_extra_data_key">
        key%1$d_press_extra_data_key</string>

    <string name="pref_key_hold_action_key">key%1$d_hold_action_key</string>
    <string name="pref_key_hold_extra_data_key">
        key%1$d_hold_extra_data_key</string>
    <string name="pref_key_hold_length_key">key%1$d_hold_length_key</string>

    <string name="pref_wakelock_key">pref_wakelock</string>

    <string name="pref_play_media_key">pref_play_media</string>

    <string name="pref_wake_up_delay_key">pref_wake_up_delay</string>

    <string name="pref_set_volume_key">pref_set_volume</string>

    <string name="pref_shell_wakeup_commands_key">pref_shell_wakeup_commands</string>

    <string name="pref_shell_suspend_commands_key">pref_shell_suspend_commands</string>

    <string name="pref_volume_level_key">pref_volume_level</string>

    <string name="pref_launch_gps_key">pref_launch_gps</string>

    <string name="pref_blank_audio_key">pref_blank_audio</string>



    <!-- Notification text !-->
    <string name="notify_su_not_granted_closing">Superuser not granted, stopping controller</string>
    <string name="notify_running">Running</string>
    <string name="notify_no_notification_listen_permission">Please enable notification listening in settings</string>

    <string name="notify_no_usage_stats_permission">Click here to enable usage monitoring in settings</string>


    <!-- Settings values !-->
    <string name="title_activity_settings">Headunit Controller</string>

    <string name="pref_debug_power_on_toggle_title">Debug power test</string>
    <string name="pref_debug_power_on_toggle_summary">Test if power on and off is working correctly</string>
    <string name="pref_debug_toggle_summary">Debugging currently %s</string>
    <string name="pref_debug_toggle_title">Debugging</string>
    <string name="pref_debug_toggle_disabled_summary">Debug mode is disabled</string>
    <string name="pref_debug_toggle_enabled_summary">Debug mode is enabled</string>


    <string name="pref_general_title">General</string>
    <string name="pref_wakelock_title">Wakelock</string>
    <string name="pref_wakelock_summary_on">Controller will keep device awake</string>
    <string name="pref_wakelock_summary_off">Controller will not keep device awake</string>

    <string name="pref_blank_audio_title">Keep audio active</string>
    <string name="pref_blank_audio_summary_on">Audio will stay active to reduce noise</string>
    <string name="pref_blank_audio_summary_off">Audio will not stay active, noise may occur</string>

    <string name="pref_max_devices_title">Number of devices</string>
    <string name="pref_max_devices_summary">Number of devices that should be connected to tablet: %s (Wake Up will not launch apps until all these devices are detected)</string>

    <string name="pref_routine_start_options_title">Routine Start Options</string>

    <string name="pref_wake_up_delay_title">Routine delay</string>
    <string name="pref_wake_up_delay_summary">Will wait %s milliseconds before running routine</string>

    <string name="pref_media_options_title">Media Options</string>

    <string name="pref_play_media_title">Continue playing media</string>
    <string name="pref_play_media_summary_on">Will continue playing the last media app</string>
    <string name="pref_play_media_summary_off">Will not continue playing the last media app</string>

    <string name="pref_device_volume_title">Device Volume</string>

    <string name="pref_set_volume_title">Set volume</string>
    <string name="pref_set_volume_summary_on">Will set volume to the desired level on wake up</string>
    <string name="pref_set_volume_summary_off">Will not set volume to the desired level on wakeup</string>

    <string name="pref_volume_level_title">Volume</string>
    <string name="pref_volume_level_summary">Volume will be set to %s</string>

    <string name="pref_start_drivers_title">Load Drivers</string>
    <string name="pref_launch_gps_title">Launch UsbGps Driver</string>
    <string name="pref_launch_gps_summary_on">UsbGps Driver will be started on wake</string>
    <string name="pref_launch_gps_summary_off">UsbGps Driver will not be started on wake</string>

    <string name="pref_shell_commands_title">Shell Commands</string>
    <string name="pref_shell_wakeup_commands_summary">Click here to set custom shell commands that will run on wake</string>

    <string name="pref_suspend_shell_commands_summary">Click here to set custom shell commands that will run on suspend</string>

    <string name="pref_launch_autobright_key">pref_launch_autobright</string>
    <string name="pref_launch_autobright_title">Launch AutoBright Service</string>
    <string name="pref_launch_autobright_summary_on">Controller will start AutoBright in the background if installed</string>
    <string name="pref_launch_autobright_summary_off">Controller will not start AutoBright</string>

    <string name="pref_launch_maps_title">Launch Maps Driving Mode</string>
    <string name="pref_launch_maps_summary_on">Controller will keep maps driving mode running</string>
    <string name="pref_launch_maps_summary_off">Controller will not keep maps driving mode running</string>
    <string name="pref_launch_maps_key">pref_launch_maps</string>

    <string name="pref_stop_navigation_title">Stop Navigation</string>
    <string name="pref_stop_navigation_summary_on">Navigation will be stopped 5 minutes after suspend</string>
    <string name="pref_stop_navigation_summary_off">Navigation will not be stopped 5 minutes after suspend</string>
    <string name="pref_stop_navigation_key">pref_stop_navigation</string>

    <string name="pref_input_service_enabled_key">pref_input_service_enabled</string>
    <string name="pref_input_service_enabled_summary_on">Tablet control from a Shuttle Xpress enabled</string>
    <string name="pref_input_service_enabled_summary_off">Tablet control from a Shuttle Xpress disabled</string>

    <string name="pref_input_service_enabled_title">Shuttle Xpress Input</string>
    <string name="pref_launch_input_summary">Manually launch the Shuttle Xpress input service</string>
    <string name="pref_launch_input_title">Start input service</string>

    <string name="device_input_button_x">Button %d</string>
    <string name="pref_first_run">firstrun</string>
    <string name="error">Error</string>
    <string name="ring_left">Ring left</string>
    <string name="ring_middle">Ring middle</string>
    <string name="ring_right">Ring right</string>
    <string name="wheel_left">Wheel left</string>
    <string name="wheel_right">Wheel right</string>
    <string name="map_action_none">None</string>
    <string name="map_action_home_button">Home button</string>
    <string name="map_action_launch_app">Launch app</string>
    <string name="map_action_launch_voice">Launch voice input</string>
    <string name="map_action_send_key">Send key press</string>
    <string name="map_action_start_driving">Start maps driving mode</string>
    <string name="pref_reset_defaults_key">pref_reset_defaults</string>
    <string name="pref_log_key">pref_log</string>
    <string name="pref_reset_defaults_title">Reset defaults</string>
    <string name="pref_reset_details_summary">Reset preferences to default</string>
    <string name="pref_cat_reset">Reset</string>
    <string name="pref_about_summary">Written by Oliver Bell - 2017 www.github.com/freshollie/AndroidHeadunitController</string>
    <string name="pref_cat_log">Log</string>
    <string name="select_application_holder">Select Application</string>
    <string name="select_key_holder">Select Key</string>
    <string name="error_no_app_selected">Please select an app to launch</string>
    <string name="error_no_key_selected">Please select a key to be pressed</string>
    <string name="incomplete_title">Incomplete</string>
    <string name="select_key_title">Select Key</string>
    <string name="select_application_title">Select Application</string>

    <string name="pref_bluetooth_tether_address">bluetooth_tether_address</string>
    <string name="pref_bluetooth_tether_category_title">Tethering</string>
    <string name="pref_bluetooth_tether_address_title">Bluetooth tether device</string>
    <string name="pref_bluetooth_tether_address_summary">When wifi is lost, tether to: %s</string>
    <string name="pref_bluetooth_tether_address_select_title">Select bluetooth device</string>
    <string name="pref_bluetooth_no_devices_messaged">You are not paired with any bluetooth devices</string>
    <string name="pref_bluetooth_tether_no_device_set">No device set</string>
    <string name="pref_screen_orientation_title">Screen orientation</string>
    <string name="pref_screen_orientation_summary">Screen orientation is set to: %s degrees</string>
    <string name="pref_screen_orientation_key">pref_screen_orientation</string>
    <string name="pref_screen_orientation_auto_entry">Auto</string>
    <string name="bluetooth_devices_none_option">None</string>


</resources>
